[gd_scene load_steps=13 format=3 uid="uid://c3gitjraydm0r"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_jv72v"]
[ext_resource type="Texture2D" uid="uid://dxtk33c33hk21" path="res://images/Ricket.png" id="2_g4ux2"]
[ext_resource type="Texture2D" uid="uid://bfgiqx55867fg" path="res://images/shotgun.png" id="3_sbsk2"]
[ext_resource type="AudioStream" uid="uid://bkbhf5yg6ui60" path="res://sfx/shotgun_bounce.wav" id="4_1nctm"]
[ext_resource type="AudioStream" uid="uid://nm1qoqkd0rwd" path="res://sfx/shotgun_reload.wav" id="5_rovxd"]
[ext_resource type="AudioStream" uid="uid://dweewu5qj6mo1" path="res://sfx/shotgun_fire.wav" id="6_w7ggh"]
[ext_resource type="Texture2D" uid="uid://bixo73xoquuhw" path="res://images/superbounce.png" id="7_xcnh2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8tgq"]
size = Vector2(20, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewseq"]
size = Vector2(22, 34)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lkvja"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("4_1nctm")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_htf5a"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("5_rovxd")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bbl8i"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("6_w7ggh")
stream_0/weight = 1.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(320, 180)
collision_layer = 2
script = ExtResource("1_jv72v")
acceleration = 2000.0
jump_height = 50.0
jump_time = 0.25
gun_horizontal_launch_vertical_boost_speed = 250.0
bullet_speed = 400.0
bullet_spread = 5.0

[node name="Appearance" type="Node2D" parent="."]

[node name="RicketSprite" type="Sprite2D" parent="Appearance"]
texture = ExtResource("2_g4ux2")

[node name="ShotgunSprite" type="Sprite2D" parent="Appearance"]
position = Vector2(0, 3)
texture = ExtResource("3_sbsk2")
offset = Vector2(7, -3)
hframes = 2

[node name="Superbounce" type="Sprite2D" parent="Appearance/ShotgunSprite"]
visible = false
position = Vector2(28, -5)
texture = ExtResource("7_xcnh2")

[node name="BounceRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 33)
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m8tgq")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="HazardDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
shape = SubResource("RectangleShape2D_ewseq")

[node name="SFX" type="Node" parent="."]

[node name="Bounce" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_lkvja")

[node name="Reload" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_htf5a")

[node name="Fire" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_bbl8i")

[connection signal="timeout" from="ReloadTimer" to="." method="reload_shotgun"]
[connection signal="body_entered" from="HazardDetector" to="." method="_on_hazard_detector_body_entered"]
